src/Lang/Parser/Lang/ParParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Lang/ParParser.y
-----------------------------------------------------------------------------

state 49 contains 1 shift/reduce conflicts.
state 170 contains 1 shift/reduce conflicts.
state 191 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pSCPL -> SCPL                               (0)
	%start_pListDefn -> ListDefn                       (1)
	%start_pDefn -> Defn                               (2)
	%start_pStmt2 -> Stmt2                             (3)
	%start_pLet -> Let                                 (4)
	%start_pStmt1 -> Stmt1                             (5)
	%start_pCaseTerm -> CaseTerm                       (6)
	%start_pLetInStmt -> LetInStmt                     (7)
	%start_pType -> Type                               (8)
	%start_pTypeN -> TypeN                             (9)
	%start_pListTypeN -> ListTypeN                     (10)
	%start_pListType -> ListType                       (11)
	%start_pListUIdent -> ListUIdent                   (12)
	%start_pCasePattern -> CasePattern                 (13)
	%start_pListCaseTerm -> ListCaseTerm               (14)
	%start_pExp15 -> Exp15                             (15)
	%start_pExp14 -> Exp14                             (16)
	%start_pExp13 -> Exp13                             (17)
	%start_pExp12 -> Exp12                             (18)
	%start_pExp11 -> Exp11                             (19)
	%start_pExp9 -> Exp9                               (20)
	%start_pExp8 -> Exp8                               (21)
	%start_pExp4 -> Exp4                               (22)
	%start_pExp3 -> Exp3                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pListPIdent -> ListPIdent                   (25)
	%start_pTypeAnnotation -> TypeAnnotation           (26)
	%start_pExp -> Exp                                 (27)
	%start_pExp2 -> Exp2                               (28)
	%start_pExp5 -> Exp5                               (29)
	%start_pExp6 -> Exp6                               (30)
	%start_pExp7 -> Exp7                               (31)
	%start_pExp10 -> Exp10                             (32)
	%start_pListExp -> ListExp                         (33)
	%start_pConstantType -> ConstantType               (34)
	Char -> L_charac                                   (35)
	Double -> L_doubl                                  (36)
	String -> L_quoted                                 (37)
	TokUnit -> L_TokUnit                               (38)
	UIdent -> L_UIdent                                 (39)
	PIdent -> L_PIdent                                 (40)
	PInteger -> L_PInteger                             (41)
	SCPL -> ListDefn                                   (42)
	ListDefn -> Defn                                   (43)
	ListDefn -> Defn ListDefn                          (44)
	Defn -> PIdent '=' Stmt1                           (45)
	Stmt2 -> 'case' Exp 'of' '{' ListCaseTerm '}'      (46)
	Stmt2 -> 'if' Exp 'then' Stmt2 'else' Stmt2        (47)
	Stmt2 -> Exp                                       (48)
	Let -> 'let'                                       (49)
	Let -> 'letrec'                                    (50)
	Stmt1 -> Let LetInStmt 'in' Stmt1                  (51)
	Stmt1 -> Stmt2                                     (52)
	CaseTerm -> CasePattern '->' Stmt1                 (53)
	LetInStmt -> PIdent '=' Exp                        (54)
	Type -> TypeN '->' Type                            (55)
	Type -> TypeN                                      (56)
	TypeN -> TokUnit                                   (57)
	TypeN -> UIdent                                    (58)
	TypeN -> '[' Type ']'                              (59)
	TypeN -> '<' ListType '>'                          (60)
	TypeN -> '(' Type ')'                              (61)
	TypeN -> ConstantType                              (62)
	ListTypeN ->                                       (63)
	ListTypeN -> TypeN                                 (64)
	ListTypeN -> TypeN ',' ListTypeN                   (65)
	ListType -> Type                                   (66)
	ListType -> Type ',' ListType                      (67)
	ListUIdent ->                                      (68)
	ListUIdent -> UIdent                               (69)
	ListUIdent -> UIdent ',' ListUIdent                (70)
	CasePattern -> 'True'                              (71)
	CasePattern -> 'False'                             (72)
	ListCaseTerm -> CaseTerm                           (73)
	ListCaseTerm -> CaseTerm ';' ListCaseTerm          (74)
	Exp15 -> PInteger                                  (75)
	Exp15 -> 'True'                                    (76)
	Exp15 -> 'False'                                   (77)
	Exp15 -> PIdent                                    (78)
	Exp15 -> String                                    (79)
	Exp15 -> '[' ListExp ']'                           (80)
	Exp15 -> '(' Exp ')'                               (81)
	Exp14 -> Exp14 Exp15                               (82)
	Exp14 -> Exp15                                     (83)
	Exp13 -> '-' Exp14                                 (84)
	Exp13 -> Exp13 ':' Exp14                           (85)
	Exp13 -> Exp14                                     (86)
	Exp12 -> Exp12 '++' Exp13                          (87)
	Exp12 -> Exp12 '*' Exp13                           (88)
	Exp12 -> Exp12 '/' Exp13                           (89)
	Exp12 -> Exp13                                     (90)
	Exp11 -> Exp11 '+' Exp12                           (91)
	Exp11 -> Exp11 '-' Exp12                           (92)
	Exp11 -> Exp12                                     (93)
	Exp9 -> Exp9 '<' Exp10                             (94)
	Exp9 -> Exp9 '>' Exp10                             (95)
	Exp9 -> Exp9 '<=' Exp10                            (96)
	Exp9 -> Exp9 '>=' Exp10                            (97)
	Exp9 -> Exp10                                      (98)
	Exp8 -> Exp8 '==' Exp9                             (99)
	Exp8 -> Exp8 '!=' Exp9                             (100)
	Exp8 -> Exp9                                       (101)
	Exp4 -> Exp4 '&&' Exp5                             (102)
	Exp4 -> Exp5                                       (103)
	Exp3 -> Exp3 '||' Exp4                             (104)
	Exp3 -> Exp4                                       (105)
	Exp1 -> '\\' ListPIdent '->' Stmt1                 (106)
	Exp1 -> 'fun' ListPIdent '->' Stmt1                (107)
	Exp1 -> Exp2                                       (108)
	ListPIdent -> PIdent                               (109)
	ListPIdent -> PIdent ListPIdent                    (110)
	TypeAnnotation -> '::' Type                        (111)
	TypeAnnotation ->                                  (112)
	Exp -> Exp1                                        (113)
	Exp2 -> Exp3                                       (114)
	Exp5 -> Exp6                                       (115)
	Exp6 -> Exp7                                       (116)
	Exp7 -> Exp8                                       (117)
	Exp10 -> Exp11                                     (118)
	ListExp ->                                         (119)
	ListExp -> Exp                                     (120)
	ListExp -> Exp ',' ListExp                         (121)
	ConstantType -> PInteger                           (122)
	ConstantType -> String                             (123)
	ConstantType -> Char                               (124)
	ConstantType -> Double                             (125)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'False'        { PT _ (TS _ 21) }
	'True'         { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'\\'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'case'         { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'fun'          { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'in'           { PT _ (TS _ 30) }
	'let'          { PT _ (TS _ 31) }
	'letrec'       { PT _ (TS _ 32) }
	'of'           { PT _ (TS _ 33) }
	'then'         { PT _ (TS _ 34) }
	'{'            { PT _ (TS _ 35) }
	'||'           { PT _ (TS _ 36) }
	'}'            { PT _ (TS _ 37) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_TokUnit      { PT _ (T_TokUnit _) }
	L_UIdent       { PT _ (T_UIdent _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PInteger     { PT _ (T_PInteger _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pSCPL    rule  0
	%start_pListDefn rule  1
	%start_pDefn    rule  2
	%start_pStmt2   rule  3
	%start_pLet     rule  4
	%start_pStmt1   rule  5
	%start_pCaseTerm rule  6
	%start_pLetInStmt rule  7
	%start_pType    rule  8
	%start_pTypeN   rule  9
	%start_pListTypeN rule  10
	%start_pListType rule  11
	%start_pListUIdent rule  12
	%start_pCasePattern rule  13
	%start_pListCaseTerm rule  14
	%start_pExp15   rule  15
	%start_pExp14   rule  16
	%start_pExp13   rule  17
	%start_pExp12   rule  18
	%start_pExp11   rule  19
	%start_pExp9    rule  20
	%start_pExp8    rule  21
	%start_pExp4    rule  22
	%start_pExp3    rule  23
	%start_pExp1    rule  24
	%start_pListPIdent rule  25
	%start_pTypeAnnotation rule  26
	%start_pExp     rule  27
	%start_pExp2    rule  28
	%start_pExp5    rule  29
	%start_pExp6    rule  30
	%start_pExp7    rule  31
	%start_pExp10   rule  32
	%start_pListExp rule  33
	%start_pConstantType rule  34
	Char            rule  35
	Double          rule  36
	String          rule  37
	TokUnit         rule  38
	UIdent          rule  39
	PIdent          rule  40
	PInteger        rule  41
	SCPL            rule  42
	ListDefn        rules 43, 44
	Defn            rule  45
	Stmt2           rules 46, 47, 48
	Let             rules 49, 50
	Stmt1           rules 51, 52
	CaseTerm        rule  53
	LetInStmt       rule  54
	Type            rules 55, 56
	TypeN           rules 57, 58, 59, 60, 61, 62
	ListTypeN       rules 63, 64, 65
	ListType        rules 66, 67
	ListUIdent      rules 68, 69, 70
	CasePattern     rules 71, 72
	ListCaseTerm    rules 73, 74
	Exp15           rules 75, 76, 77, 78, 79, 80, 81
	Exp14           rules 82, 83
	Exp13           rules 84, 85, 86
	Exp12           rules 87, 88, 89, 90
	Exp11           rules 91, 92, 93
	Exp9            rules 94, 95, 96, 97, 98
	Exp8            rules 99, 100, 101
	Exp4            rules 102, 103
	Exp3            rules 104, 105
	Exp1            rules 106, 107, 108
	ListPIdent      rules 109, 110
	TypeAnnotation  rules 111, 112
	Exp             rule  113
	Exp2            rule  114
	Exp5            rule  115
	Exp6            rule  116
	Exp7            rule  117
	Exp10           rule  118
	ListExp         rules 119, 120, 121
	ConstantType    rules 122, 123, 124, 125

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_PIdent       shift, and enter state 72

	PIdent         goto state 129
	SCPL           goto state 133
	ListDefn       goto state 134
	Defn           goto state 132

State 1


	L_PIdent       shift, and enter state 72

	PIdent         goto state 129
	ListDefn       goto state 131
	Defn           goto state 132

State 2


	L_PIdent       shift, and enter state 72

	PIdent         goto state 129
	Defn           goto state 130

State 3


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	'case'         shift, and enter state 123
	'fun'          shift, and enter state 71
	'if'           shift, and enter state 124
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Stmt2          goto state 128
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp1           goto state 57
	Exp            goto state 122
	Exp2           goto state 59
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp10          goto state 63

State 4


	'let'          shift, and enter state 125
	'letrec'       shift, and enter state 126

	Let            goto state 127

State 5


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	'case'         shift, and enter state 123
	'fun'          shift, and enter state 71
	'if'           shift, and enter state 124
	'let'          shift, and enter state 125
	'letrec'       shift, and enter state 126
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Stmt2          goto state 119
	Let            goto state 120
	Stmt1          goto state 121
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp1           goto state 57
	Exp            goto state 122
	Exp2           goto state 59
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp10          goto state 63

State 6


	'False'        shift, and enter state 96
	'True'         shift, and enter state 97

	CaseTerm       goto state 118
	CasePattern    goto state 94

State 7


	L_PIdent       shift, and enter state 72

	PIdent         goto state 116
	LetInStmt      goto state 117

State 8


	'('            shift, and enter state 108
	'<'            shift, and enter state 109
	'['            shift, and enter state 110
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 111
	L_UIdent       shift, and enter state 101
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 102
	UIdent         goto state 103
	PInteger       goto state 40
	Type           goto state 115
	TypeN          goto state 105
	ConstantType   goto state 107

State 9


	'('            shift, and enter state 108
	'<'            shift, and enter state 109
	'['            shift, and enter state 110
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 111
	L_UIdent       shift, and enter state 101
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 102
	UIdent         goto state 103
	PInteger       goto state 40
	TypeN          goto state 114
	ConstantType   goto state 107

State 10


	'('            shift, and enter state 108
	'<'            shift, and enter state 109
	'['            shift, and enter state 110
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 111
	L_UIdent       shift, and enter state 101
	L_PInteger     shift, and enter state 44
	%eof           reduce using rule 63

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 102
	UIdent         goto state 103
	PInteger       goto state 40
	TypeN          goto state 112
	ListTypeN      goto state 113
	ConstantType   goto state 107

State 11


	'('            shift, and enter state 108
	'<'            shift, and enter state 109
	'['            shift, and enter state 110
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 111
	L_UIdent       shift, and enter state 101
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 102
	UIdent         goto state 103
	PInteger       goto state 40
	Type           goto state 104
	TypeN          goto state 105
	ListType       goto state 106
	ConstantType   goto state 107

State 12


	L_UIdent       shift, and enter state 101
	%eof           reduce using rule 68

	UIdent         goto state 99
	ListUIdent     goto state 100

State 13


	'False'        shift, and enter state 96
	'True'         shift, and enter state 97

	CasePattern    goto state 98

State 14


	'False'        shift, and enter state 96
	'True'         shift, and enter state 97

	CaseTerm       goto state 93
	CasePattern    goto state 94
	ListCaseTerm   goto state 95

State 15


	'('            shift, and enter state 65
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 92

State 16


	'('            shift, and enter state 65
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 91

State 17


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 90

State 18


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 89

State 19


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 88

State 20


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp9           goto state 87
	Exp10          goto state 63

State 21


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp9           goto state 53
	Exp8           goto state 86
	Exp10          goto state 63

State 22


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 72
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 85
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp10          goto state 63

State 23

